# finsight-ai

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
llm_layer/: 01_llm_basics.py
